--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@walletconnect/web3-provider": "^1.8.0",
+    "ethers": "^5.7.0",
     "next": "12.2.5",
+    "primeicons": "^5.0.0",
+    "primereact": "^8.4.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.3.0",
+    "styled-components": "^5.3.5",
+    "web3modal": "^1.9.8"
   },
   "devDependencies": {
     "eslint": "8.22.0",
